# avs-toolkit

./: .gitignore  Cargo.toml  DEMO.md  JAKE_DEMO.md  LICENSE  README.md  setup.sh
.cargo/: config.toml
.github/workflows/: basic.yml  gui.yml
contracts/ai-bouncer-caller/: Cargo.toml  README.md
contracts/ai-bouncer-caller/src/: contract.rs  msg.rs  state.rs
contracts/ai-bouncer-hook-consumer/: Cargo.toml  README.md
contracts/ai-bouncer-hook-consumer/src/: contract.rs  interface.rs  lib.rs  msg.rs
contracts/mock-hook-consumer/: Cargo.toml  README.md
contracts/mock-hook-consumer/src/: contract.rs  interface.rs  lib.rs  msg.rs  state.rs
contracts/mock-operators/: Cargo.toml  README.md
contracts/mock-operators/src/: contract.rs  error.rs  interface.rs  msg.rs  state.rs
contracts/mock-operators/src/tests/: common.rs  multi.rs
contracts/oracle-verifier/: Cargo.toml  README.md
contracts/oracle-verifier/src/: contract.rs  error.rs  interface.rs  lib.rs  msg.rs  state.rs
contracts/oracle-verifier/src/tests/: common.rs  mod.rs  multi.rs
contracts/task-queue/: Cargo.toml  README.md
contracts/task-queue/src/: contract.rs  error.rs  interface.rs  msg.rs  state.rs
contracts/task-queue/src/tests/: common.rs  multi.rs
contracts/tasks/: Cargo.toml
contracts/tasks/src/: contract.rs  interface.rs  state.rs
contracts/tasks/src/tests/: common.rs
contracts/verifier-simple/: Cargo.toml  README.md
contracts/verifier-simple/src/: contract.rs  error.rs  interface.rs  msg.rs  state.rs
contracts/verifier-simple/src/tests/: common.rs  multi.rs
crates/avs/: Cargo.toml
crates/avs/src/: lib.rs  task_queue.rs
crates/avs/src/http/: response.rs
crates/avs/src/runtime/: block_on.rs  mod.rs  polling.rs  reactor.rs
crates/avs/wit/: lay3r_avs@0.3.0.wit  lay3r_avs@0.9.0.wit
examples/btc-avg/: Cargo.toml
examples/btc-avg/src/: bindings.rs  lib.rs
examples/square/: Cargo.toml
examples/square/src/: bindings.rs  lib.rs
scripts/: build_schemas.sh  build_wasi.sh  collect_wasm.sh  optimizer.sh  setup_wasi.sh
tools/: config.json
tools/cli/: Cargo.toml  README.md  config.json
tools/cli/src/: args.rs  config.rs  context.rs  main.rs
tools/cli/src/commands/: deploy.rs  faucet.rs  mod.rs  operator.rs  task_queue.rs  upload.rs  verifier.rs  wasmatic.rs  wasmatic_task_bindings.rs
tools/cli/src/commands/wasmatic/: cron_bindings.rs
tools/deploy/: Cargo.toml  README.md  config.json
tools/deploy/src/: args.rs  main.rs
tools/gui/: Cargo.toml  README.md  build.rs  config.json  index.html
tools/gui/src/: client.rs  config.rs  lib.rs  prelude.rs  route.rs
tools/gui/src/atoms/: buttons.rs  checkbox.rs  dropdown.rs  label.rs  mod.rs  text_area.rs  text_input.rs
tools/gui/src/page/: dashboard.rs  landing.rs  logo.rs  main.rs  mod.rs  notfound.rs
tools/gui/src/page/dashboard/block/: events.rs
tools/gui/src/page/dashboard/contract/: execute.rs  instantiate.rs  query.rs  upload.rs
tools/gui/src/page/dashboard/wallet/: faucet.rs
tools/gui/src/page/main/: contract.rs  sidebar.rs  task_queue.rs  wasmatic.rs
tools/gui/src/page/main/block/: events.rs
tools/gui/src/page/main/contract/: execute.rs  instantiate.rs  query.rs  upload.rs
tools/gui/src/page/main/task_queue/: add_task.rs  view_queue.rs
tools/gui/src/page/main/wallet/: faucet.rs
tools/gui/src/page/main/wasmatic/: add_app.rs  app_test.rs  deploy.rs  info.rs  list.rs  list_apps.rs  remove.rs  run.rs  test.rs  test_app.rs
tools/gui/src/page/main/wasmatic/add_app/: envs.rs  permissions.rs  trigger.rs  wasm_source.rs
tools/gui/src/page/main/wasmatic/deploy/: envs.rs  permissions.rs  trigger.rs
tools/gui/src/theme/: color.rs  filters.rs  misc.rs  mod.rs  responsive.rs  stylesheet.rs  typography.rs  z_index.rs
tools/gui/src/theme/color/: classes.rs  mod.rs  scheme.rs  values.rs
tools/gui/src/util/: file.rs  mixins.rs  mod.rs  signal.rs
tools/shared/: Cargo.toml
tools/shared/src/: faucet.rs  file.rs  lib.rs  operator.rs  task_queue.rs  verifier.rs  wasmatic.rs
tools/shared/src/deploy/: contracts.rs
tools/verifier-helper/: Cargo.toml
tools/verifier-helper/src/: lib.rs
wasi/ai-bouncer/: Cargo.toml
wasi/ai-bouncer/src/: lib.rs  ollama.rs  session.rs
wasi/ai-bouncer/src/providers/: groq.rs  mod.rs  ollama.rs
wasi/evm-query/: Cargo.toml
wasi/evm-query/src/: .lib.rs.swp  bindings.rs  lib.rs
wasi/ollama/: Cargo.toml
wasi/ollama/src/: bindings.rs  lib.rs  ollama.rs
wasi/oracle-example/: Cargo.toml  README.md
wasi/oracle-example/src/: coin_gecko.rs  lib.rs  price_history.rs
wasi/py_square/: .gitignore  README.md  app.py
wasi/py_square/task_queue/: __init__.py
wasi/py_square/task_queue/imports/: error.py  lay3r_avs_types.py  outgoing_handler.py  poll.py  streams.py  wasi_http_types.py
wasi/square/: Cargo.toml  README.md
wasi/square/src/: bindings.rs  lib.rs
wit/: lay3r_avs@0.13.0.wit  lay3r_avs@0.3.0.wit  wit.toml
