[package]
name = "ai-bouncer-hook-consumer"
version = "0.1.0"
authors = ["Noah <hi@noah.zone>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw-controllers = { workspace = true }
cw2 = { workspace = true }
cw4 = { workspace = true }
cw4-group = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cw-orch = { workspace = true }
lavs-apis = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
lavs-orch = { workspace = true }
cw-orch = { workspace = true }
