[package]
name = "lavs-oracle-verifier"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
# Enable this for testing if you want more coverage. Requires properly build artifacts (wasm files)


[dependencies]
cosmwasm-schema  = "2.1.4"
cosmwasm-std     = { version = "2.1.4", features = ["cosmwasm_1_4"] }
cw-orch = { version = "0.25.0" }
cw-storage-plus  = "2.0.0"
cw-utils         = "2.0.0"
cw2              = "2.0.0"
lavs-apis = { git = "https://github.com/Lay3rLabs/avs-toolkit", tag = "v0.1.2"}
lavs-helpers = { git = "https://github.com/Lay3rLabs/avs-toolkit", tag = "v0.1.2"}
schemars         = "0.8.17"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror        = "1.0.59"

[dev-dependencies]
cw-multi-test = "0.20"
lavs-orch = { git = "https://github.com/Lay3rLabs/avs-toolkit", tag = "v0.1.2"}
cw-orch = "0.25.0"
lavs-task-queue = { git = "https://github.com/Lay3rLabs/avs-toolkit", tag = "v0.1.2"}
lavs-mock-operators = { git = "https://github.com/Lay3rLabs/avs-toolkit",  tag = "v0.1.2"}
