[package]
name = "lavs-oracle-verifier"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
# Enable this for testing if you want more coverage. Requires properly build artifacts (wasm files)


[dependencies]
cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cw-orch = { workspace = true }
cw-storage-plus  = { workspace = true }
cw-utils         = { workspace = true }
cw2              = { workspace = true }
lavs-apis = { workspace = true }
lavs-helpers = { workspace = true }
schemars         = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror        = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
lavs-orch = { workspace = true }
cw-orch = { workspace = true }
lavs-task-queue = { workspace = true }
lavs-mock-operators = { workspace = true }
