[package]
name = "avs"
description = "Bindings for creating Wasm component AVS on Layer."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
#homepage = { workspace = true }
repository = { workspace = true}

[dependencies]
wstd = { workspace = true }
wasi = { workspace = true }
