[package]
name = "btc-avg"
version = "0.9.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
wit-bindgen-rt = { version = "0.32.0", features = ["bitflags"] }
anyhow = { workspace = true }
avs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "lay3r:btc-avg"
target = "lay3r:avs/cron-job@0.13.0"

[package.metadata.component.dependencies]
