[package]
name = "square"
version = "0.9.0"
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json =  { workspace = true }
wit-bindgen-rt = { version = "0.32.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "lay3r:square"
target = "lay3r:avs/task-queue@0.13.0"

[package.metadata.component.dependencies]
