[package]
name = "avs-toolkit-cli"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
avs-toolkit-shared = {workspace = true}
lavs-mock-operators = {workspace = true}
lavs-verifier-simple = {workspace = true}
lavs-oracle-verifier = {workspace = true}
lavs-task-queue = {workspace = true}
lavs-apis = { workspace = true }
layer-climb = {workspace = true}
layer-climb-cli = {workspace = true}
cosmwasm-std = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
deadpool = {workspace = true}
rand = {workspace = true}
reqwest = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi-http = { workspace = true }
wasmtime-wasi = { workspace = true }
