[package]
name = "avs-toolkit-shared"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
lavs-mock-operators = { workspace = true }
lavs-verifier-simple = { workspace = true }
lavs-oracle-verifier = { workspace = true }
lavs-task-queue = { workspace = true }
lavs-apis = { workspace = true }
layer-climb = { workspace = true }
anyhow = { workspace = true }
cosmwasm-std = { workspace = true }
cw-ownable = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
