[package]
name = "verifier-helper"
version = "0.1.0"
authors = ["Ethan Frey <ethanfrey@noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
thiserror = { workspace = true }
lavs-apis = { workspace = true }
