[package]
name = "ai-bouncer"
authors = ["Noah <hi@noah.zone>"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
layer-wasi = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
wit-bindgen-rt = { workspace = true }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "lay3r:ai-bouncer"
target = "lay3r:avs/task-queue@0.3.0"

[package.metadata.component.dependencies]
